--- a/style.css
+++ b/style.css
@@ -36,18 +36,21 @@
   }
   
   h2 {
-    font-size: 4.2rem;
+    font-size: 3.5rem;
     color: #a549ca;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     font-weight: 700;
   }
   
   h3 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     color: #a549ca;
     font-weight: 500;
   }
   
+  p {
+    font-size: 1rem;
+  }
   /* UTILITIES */
   
   .container {
@@ -91,6 +94,7 @@
     max-width: 100%;
     height: auto; /* Maintains the aspect ratio */
     padding: 1rem 0;
+    margin: 1rem;
   }
 
 
@@ -101,18 +105,7 @@ img {
 }
 
 /* Media query for devices wider than 600px */
-@media (min-width: 600px) {
-  img {
-    max-width: 500px; /* Fixed maximum width */
-  }
-}
 
-/* Media query for devices wider than 1200px */
-@media (min-width: 1200px) {
-  .max-width-img {
-    max-width: 800px; /* Different maximum width */
-  }
-}
 
 
   /* BUTTONS */
@@ -205,7 +198,7 @@ button {
 
 /* Specific styles for questions and choices */
 .question {
-  font-size: 4.2rem;
+  font-size: 3.5rem;
   color: #a549ca;
   margin-bottom: 4rem;
   font-weight: 700;
@@ -217,8 +210,8 @@ button {
   display: flex;
   justify-content: center;
   font-size: 2rem;
-  padding: 1rem 0;
-  width: 40rem;
+  padding: 1rem 1rem;
+  width: 70%;
   text-align: center;
   border: 0.1rem solid #cd56eb;
   border-radius: 3rem;
